--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "serve": "http-server dist"
+    "serve": "http-server -c1 dist"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "starwars-names": "^1.6.0",
     "webpack": "^4.10.0",
     "webpack-cli": "^2.1.4"
   },
