--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.28.11",
     "starwars-names": "^1.6.0",
+    "style-loader": "^0.21.0",
     "webpack": "^4.10.0",
     "webpack-cli": "^2.1.4"
   },
