--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^0.28.11",
+    "mini-css-extract-plugin": "^0.4.0",
     "starwars-names": "^1.6.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.10.0",
